--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "file-saver": "^2.0.5",
     "framer-motion": "^12.9.1",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.548.0",
     "path": "^0.12.7",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
